# hifi

./: CMakeLists.txt
android/: build.gradle  containerized_build.sh
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native.cpp
android/app/src/main/java/io/highfidelity/hifiinterface/: GvrSplashActivity.java  InterfaceActivity.java  MainActivity.java  PermissionChecker.java  SplashActivity.java
android/app/src/main/java/io/highfidelity/hifiinterface/service/: FirebaseMessagingService.java
android/app/src/main/java/io/highfidelity/hifiinterface/util/: Util.java
android/app/src/main/java/org/qtproject/qt5/android/bindings/: QtActivity.java
android/app/src/main/res/drawable/: ic_gvr_close.xml  ic_gvr_settings.xml
android/app/src/main/res/layout/: activity_splash.xml
android/app/src/main/res/values/: styles.xml
android/apps/interface/: build.gradle
assignment-client/src/audio/: AudioMixer.cpp  AudioMixer.h  AudioMixerClientData.cpp  AudioMixerClientData.h  AudioMixerSlave.cpp
cmake/android/: AndroidManifest.xml.in  QtCreateAPK.cmake  deployment-file.json.in
cmake/macros/: TargetGoogleVR.cmake  TargetHifiAudioCodec.cmake
interface/: CMakeLists.txt
interface/res/layout/: activity_web_view.xml
interface/res/values/: dimens.xml  strings.xml  styles.xml
interface/resources/controllers/: daydream.json
interface/resources/qml/: AddressBarDialog-android.qml  LoginDialog-android.qml
interface/resources/qml/+android/: LoginDialog.qml  Stats.qml
interface/resources/qml/LoginDialog/: LinkAccountBody-android.qml  LinkAccountBody.qml  SignUpBody-android.qml
interface/resources/qml/controls/: TextInput.qml  WebViewAndroid.qml
interface/resources/qml/controls-uit/: ImageButton.qml  Table.qml
interface/src/: AndroidHelper.cpp  AndroidHelper.h  Application.cpp  Application.h  Camera.cpp  DiscoverabilityManager.cpp  main.cpp
interface/src/avatar/: MyAvatar.cpp  SkeletonModel.cpp
interface/src/scripting/: AccountScriptingInterface.cpp  ControllerScriptingInterface.cpp  ControllerScriptingInterface.h  DialogsManagerScriptingInterface.cpp  DialogsManagerScriptingInterface.h  HMDScriptingInterface.cpp  HMDScriptingInterface.h
interface/src/ui/: AddressBarDialog.cpp  DialogsManager.cpp  DialogsManager.h  LoginDialog.cpp  LoginDialog.h  Stats.cpp  Stats.h
libraries/audio-client/src/: AudioClient.cpp  AudioClient.h
libraries/audio/src/: InboundAudioStream.cpp  InboundAudioStream.h
libraries/daydream/: CMakeLists.txt
libraries/daydream/src/: Android2DDisplayPlugin.cpp  Android2DDisplayPlugin.h  DaydreamPlugin.cpp  DaydreamPlugin.h  DaydreamProvider.cpp
libraries/daydream/src/daydream/: DaydreamControllerManager.cpp  DaydreamControllerManager.h  DaydreamDisplayPlugin.cpp  DaydreamDisplayPlugin.h  DaydreamHelpers.cpp  DaydreamHelpers.h
libraries/entities-renderer/src/: RenderableWebEntityItem.cpp
libraries/networking/src/: AccountManager.cpp  AddressManager.cpp  AddressManager.h  LimitedNodeList.cpp  LimitedNodeList.h  PacketReceiver.cpp  PacketReceiver.h
libraries/render-utils/src/: RenderForwardTask.cpp  RenderPipelines.cpp  overlay3D_forward_translucent.slf
libraries/script-engine/src/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngines.cpp  ScriptEngines.h
libraries/shared/src/: PathUtils.cpp  PathUtils.h
libraries/ui/src/: MainWindow.cpp  OffscreenQmlElement.h  QmlAndroidClass.cpp  QmlAndroidClass.h  QmlMenuBarClass.cpp  QmlMenuBarClass.h
plugins/daydream/: CMakeLists.txt
plugins/daydream/src/: Daydream2DDisplayPlugin.cpp  Daydream2DDisplayPlugin.h  DaydreamPlugin.cpp  DaydreamPlugin.h  DaydreamProvider.cpp
plugins/daydream/src/daydream/: DaydreamHelpers.cpp
plugins/hifiCodec/: CMakeLists.txt
scripts/: defaultScripts.js
scripts/+android/: defaultScripts.js
scripts/system/: android.js  avatarSelection.js  bubble.js  chat.js  connections.js  friends.js  godView.js  goto-android.js  hmd.js
scripts/system/+android/: actionbar.js  audio.js  modes.js  radar.js  stats.js
scripts/system/controllers/: handControllerGrabAndroid.js  teleport.js
scripts/system/libraries/: uniqueColor.js
(+51 files in other folders)
